spring-domain-directory/src/main/java/com/example/demo/global/error/exception/ErrorException.java
package com.example.demo.global.error.exception;

public class ErrorException extends RuntimeException {
}
